# CV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OpenCV  OpenCV.cpp  README.md  cmake_install.cmake  main  main.cpp  main_working.cpp
algorithmic/: C++  Ughh.py  Use_This.cpp  algorithmic_C++  test.py  ugh.py
